clusters/labinfra/apps/backstage.xuperson.org/backstage-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    name: backstage
